--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.4.2",
+    "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.4.2",
     "@nestjs/platform-express": "^9.4.2",
+    "@nestjs/typeorm": "^9.0.1",
+    "@types/pg": "^8.10.1",
+    "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.16"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.5.0",
