--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/platform-express": "^9.4.2",
     "@nestjs/typeorm": "^9.0.1",
     "@types/pg": "^8.10.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
